Fix background image path in index.html

--- a/project1-hyperlink-poem/index.html
+++ b/project1-hyperlink-poem/index.html
@@ -4,7 +4,7 @@
         <title>music is my escape</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body style="background-image: url('music.jpg');">
+    <body style="background-image: url('./music.JPG');">
         <a href="music.html" class="top-left">music</a>
         <a href="../index.html" class="back-btn">← Back to Home</a>
 
